src/sass/main.scss
/* ======= STYLES ======= */

#courseNumber, #courseNumber2, #courseNumber3, #courseNumber4, #resi, #firstclass, #matriculating {
    outline: none;
    padding: 0.4rem;
    border-radius: 5px; 
    border: none; 
    box-shadow: 0 0 10px rgb(202, 202, 202);
    margin: 1rem;
}

.addCourse {
    border: none;
    font-size: 12pt;
    background-color: #fafafa;
}

.addCourse:hover {
    cursor: pointer;
    text-decoration: underline;
}

#residency, #selectcourses {
    font-weight: bold;
}

#calc, #reload {
    background-color:rgb(51, 51, 142);
    color:white;
    padding: 0.8rem;
    border-radius: 5px; 
    border: none; 
    box-shadow: 0 0 10px rgb(202, 202, 202);
    margin: 0.8rem; 
    font-size: 12pt;
    font-weight: bold;


    &:hover {
        cursor: pointer;
    }
}

